--- a/vignettes/NMsim-ParamUncertain.Rmd
+++ b/vignettes/NMsim-ParamUncertain.Rmd
@@ -41,6 +41,12 @@ file.mod <- file.project("nonmem/xgxr032.mod")
 dat.sim <- read_fst("simulate-results/dat_sim.fst")
 ```
 
+## Other relevant material
+Please note the following ACOP2024 poster which is more recent and more comprehensive than this document:  
+[**Simulation of clinical trial predictions with model uncertainty using NMsim**](../reference/figures/NMsim_param_uncertainty_web.pdf) (Poster T110)  
+Authors: **Sanaya Shroff**, **Philip Delff**  
+
+
 ## Objectives
 This vignettes aims at enabling you to use `NMsim` for the following purposes
 
