--- a/README.Rmd
+++ b/README.Rmd
@@ -116,7 +116,7 @@ provide a simple, flexible, and powerful R interface. This allows for
 automation of most simulation-based analyses.
 
 
-<img src='man/figures/intro-tab.png' align="right" height="120" />
+<img src='man/figures/intro-tab.png' height="120" />
 
 
 
