--- a/vignettes/NMsim-forest.Rmd
+++ b/vignettes/NMsim-forest.Rmd
@@ -60,8 +60,8 @@ library(knitr) ## for printing tables with knitr::kable
 NMdataConf(
     path.nonmem = "/opt/NONMEM/nm75/run/nmfe75", ## path to NONMEM executable
     dir.sims="simtmp-forest", ## where to store temporary simulation results
-    dir.res="simres-forest",   ## where to store final simulation results
-    as.fun="data.table"
+    dir.res="simres-forest"   ## where to store final simulation results
+    ## ,as.fun="data.table"
 )
 
 ```
@@ -184,7 +184,7 @@ simres.forest <- NMsim(file.mod # path to NONMEM model
 ### Read simulation results
 simres <- NMreadSim("simres-forest/xgxr134_forest_mvrnorm_MetaData.rds",wait=TRUE,rm.tmp=TRUE)
 ## Check how many models returned simulation results
-simres[,uniqueN(model.sim)]
+as.data.table(simres)[,uniqueN(model.sim)]
 ```
 
 If you encounter issues with samples that do not run, please consider
@@ -216,7 +216,7 @@ funs.exposure <- list(
     ## ,"Concentration at 4 hours"=function(x) x$value[x$TAPD==4]
 )
 
-sum.uncertain <- summarizeCovvar(simres,
+sum.uncertain <- summarizeCovs(simres,
                                  funs.exposure = funs.exposure,
                                  by=cc(period),
                                  cover.ci=.95
@@ -228,7 +228,7 @@ sum.uncertain <- summarizeCovvar(simres,
 We will use the R package `coveffectsplot` for plotting. `coveffectsplot::forest_plot()` requires certain column names so we adjust those first.
 
 ```{r,fig.width=10}
-
+setDT(sum.uncertain)
 setnames(sum.uncertain,
          cc(covvalf,predmm,predml,predmu,metric.var),
          cc(label,mid,lower,upper,paramname)
@@ -279,11 +279,11 @@ forest.ss <- fun.plot(sum.uncertain[period=="Steady-State"])
 
 
 ## Post processing explained step by step
-We are including the code from the main steps in the post processing function, `NMsim::summarizeCovvar()`. It is important that the scientist understands that what the forest plots derived in this document represent is the relative effect of the covariate on the exposure metric. This is derived by `NMsim::summarizeCovvar()` as quantiles of the exposure relative to the reference subject. The confidence interval hence expresses the uncertainty on the covariate effect for a subject with other covariates at reference values.
+We are including the code from the main steps in the post processing function, `NMsim::summarizeCovs()`. It is important that the scientist understands that what the forest plots derived in this document represent is the relative effect of the covariate on the exposure metric. This is derived by `NMsim::summarizeCovs()` as quantiles of the exposure relative to the reference subject. The confidence interval hence expresses the uncertainty on the covariate effect for a subject with other covariates at reference values.
 
 
 Notice, the code below consists of snippets from the
-`NMsim::summarizeCovvar()` function. The code is not intended to be
+`NMsim::summarizeCovs()` function. The code is not intended to be
 used on its own. 
 
 ```{r,eval=FALSE}
