--- a/vignettes/NMsim-forest.Rmd
+++ b/vignettes/NMsim-forest.Rmd
@@ -201,8 +201,11 @@ of each parameter without relying on a well formatted parameter table.
 
 
 ```{r}
-NMdata::NMreadExt(file.mod)[par.type=="THETA",.(RSE=se/value),by=.(par.name,FIX)] |>
-    NMdata::mergeCheck(NMrelate(file.mod,par.type="THETA")[,.(par.name,code)],by="par.name",quiet=TRUE)
+NMdata::NMreadExt(file.mod,as.fun="data.table")[
+            par.type=="THETA",.(RSE=se/value),by=.(par.name,FIX)] |>
+    NMdata::mergeCheck(
+                NMrelate(file.mod,par.type="THETA")[,.(par.name,code)],
+                by="par.name",quiet=TRUE)
 ```
 
 
