--- a/vignettes/NMsim-forest.Rmd
+++ b/vignettes/NMsim-forest.Rmd
@@ -24,7 +24,7 @@ pkgdown:
 library(knitr)
 ```
 
-<img src='../man/figures/NMsimlogo240.png' align="right" height="120" />
+<img src='../man/figures/NMsimlogo240.png' align="right" height="120" alt="NMsim" />
 
 # Introduction
 The forest plot is an effective and widely recognized way to
