--- a/README.Rmd
+++ b/README.Rmd
@@ -116,7 +116,7 @@ provide a simple, flexible, and powerful R interface. This allows for
 automation of most simulation-based analyses.
 
 
-<img src='man/figures/intro-tab.png' height="180" />
+<img src='man/figures/intro-tab.png' height="140" alt="NMsim can simulate NONMEM models right away - but only ifh NONMEM is avaiable." />
 
 
 
