more general modify.model

--- a/devel/how_to_devel_sim_method.Rmd
+++ b/devel/how_to_devel_sim_method.Rmd
@@ -1,14 +1,28 @@
 ## How to develop a "simulation method" for NMsim
 
-`NMsim()`'s `method.sim` argument allows the user to specify how to process control streams before simulation. The value provided to `method.sim` must be a function, and it must accept a few pre-defined arguments. 
+`NMsim()`'s `method.sim` argument allows the user to specify how to
+process control streams before simulation. The value provided to
+`method.sim` must be a function, and it must accept a few pre-defined
+arguments.
 
-The aim with `method.sim` is to process path.sim, re-save it, and return at least the path to the processed simulation control stream(s). The method can return multiple control stream paths if needed. As an example `NMsim_VarCov()` takes a `nsims` argument which - if greater than one - will make `NMsim_VarCov()` create multiple control streams with different parameter values.
+The aim with `method.sim` is to process path.sim, re-save it, and
+return at least the path to the processed simulation control
+stream(s). The method can return multiple control stream paths if
+needed. As an example `NMsim_VarCov()` takes a `nsims` argument
+which - if greater than one - will make `NMsim_VarCov()` create
+multiple control streams with different parameter values.
 
-A simulation method is passed to `NMsim()` as an argument. This means that the function can be defined anywhere available to the user. The user can in other word develop and use their own methods independedntly of the development of `NMsim`.
+A simulation method is passed to `NMsim()` as an argument. This means
+that the function can be defined anywhere available to the user. The
+user can in other word develop and use their own methods
+independedntly of the development of `NMsim`.
 
 ### What a simulation method should do and what it should not do
 Most importantly, the simulation method must not handle data sections
-like `$DATA`, `$INPUT`, and `$TABLE`. Other than that, it should prepare the control stream to perform whatever actions desired from the method. Look at the simplest possible simulation method, called `NMsim_asis()`
+like `$DATA`, `$INPUT`, and `$TABLE`. Other than that, it should
+prepare the control stream to perform whatever actions desired from
+the method. Look at the simplest possible simulation method, called
+`NMsim_asis()`
 
 ```{r,eval=FALSE}
 > NMsim_asis
