--- a/vignettes/NMsim-intro.Rmd
+++ b/vignettes/NMsim-intro.Rmd
@@ -18,9 +18,7 @@ output:
 bibliography: [packages.bib]
 pkgdown:
   as_is: true
-
 ---
-
 
 ```{css echo=FALSE}
 
@@ -110,32 +108,6 @@ div.data {
  border: solid 5px #FFDE9C;
  /* background-image: url("Stats graph_ffffff.png"); */
 }
-
-
-/* ----------- code fold button ------------- */
-.showopt {
-  background-color: #004c93;
-  color: #FFFFFF; 
-  width: 100px;
-  height: 20px;
-  text-align: center;
-  vertical-align: middle !important;
-  float: right;
-  font-family: sans-serif;
-  border-radius: 8px;
-  cursor: pointer;
-}
-
-.showopt:hover {
-    background-color: #dfe4f2;
-    color: #004c93;
-}
-
-pre.plot {
-  background-color: white !important;
-}
-
-
 
 ``` 
 
@@ -233,12 +205,10 @@ simres <- NMsim(file.mod=file.mod,data=data.sim)
 simres <- NMreadSim("simres-intro/xgxr021_noname_MetaData.rds")
 ```
 
+<details>
 <summary>Plot simulation results (click to show code)</summary>
 
-<div class="fold s">
-
 ```{r,simple-sim-plot,eval=TRUE,echo=TRUE,results="hide"}
-
 datl <- as.data.table(simres) |>
     melt(measure.vars=cc(PRED,IPRED,Y))
 
@@ -248,14 +218,13 @@ plot1 <- ggplot(datl,aes(TIME,value,colour=variable))+
     labs(x="Hours since first dose",y="Concentration (ng/mL)",
          subtitle="Simulation of one new subject.",
          colour="")
-
+plot1
 ```
-</div>
+</details>
 
 ```{r,simple-sim-showplot,echo=FALSE,fig.cap='`PRED`, `IPRED`, and `Y` (if defined in control stream) are easily obtained with NMsim.'}
 plot1
 ```
-
  
 Notice that no information about the model is needed except for the
 control stream file path. The simulation is based on evaluation of
@@ -584,8 +553,7 @@ simres <- NMreadSim("simres-intro/xgxr021_noname_MetaData.rds")
 
 The folder and file names were constructed based on `dir.res="simres-intro"` and because `name.sim` was not provided for that first simulation, in which case "noname" is used as a placeholder. In fact, if we look at the console output from NMsim, it is telling us exactly that (look at the last line).
 
-<div class="fold o">
-
+<details>
 <summary>Click to show R console output from NMsim</summary>
 
 
@@ -610,5 +578,6 @@ Simulation results returned. Re-read them without re-simulating using:
 
 ```
 
-</div>
+</details>
+
 
