--- a/vignettes/NMsim-intro-withfolding.Rmd
+++ b/vignettes/NMsim-intro-withfolding.Rmd
@@ -11,7 +11,7 @@ output:
       toc_depth: 4
       toc_float: true
       number_sections: false
-      df_print: paged
+      df_print: kable
       editor_options:
         chunk_output_type: inline
       code_folding: show
